<resources>
    <string name="app_name">Phantomage</string>
    <string name="button_ok">OK</string>
    <string name="button_start">Show overlay</string>
    <string name="button_stop">Hide overlay</string>
    <string name="button_select_image">Select image</string>
    <string name="button_clear_image">Clear image</string>
    <string name="channel_main">Main</string>
    <string name="image_view_description">Image preview</string>
    <string name="menu_about">About</string>
    <string name="notification_title">This app displays on top of other apps you\'re using</string>
    <string name="notification_text">Press here to hide overlay</string>
    <string name="permission_overlay">Allow display over other apps</string>
    <string name="snackbar_settings">SETTINGS</string>
    <string name="text_about">v1.2.0, © NeoFusion, 2019–2020</string>
    <string name="text_opacity">Opacity: %1$d%%</string>
    <string name="text_padding">Padding:</string>
    <string name="text_px">px</string>
    <string name="error_file_not_found">Failed to open source file</string>
    <string name="error_io">Error while loading file</string>
</resources>
